# geoindexing-comparison

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  DockerfileBackend  DockerfileManager  DockerfileWorker  Makefile  README.md  docker-compose-manager.yaml  docker-compose-worker.yaml  docker-compose.yaml  go.mod  go.sum  main.go  package-lock.json  package.json
.data/: db.sqlite
.github/workflows/: go.yml  lint.yml
backend/: .golangci.yml  DockerfileManager  DockerfileWorker  Makefile  go.mod  go.sum
backend/generator/: interface.go  noisy.go  noisy_test.go  normal.go  normal_test.go  simple.go  simple_test.go  utils.go
backend/geo/: distance.go  export.go  geohash.go  geohash_test.go  haversine.go  point.go  point_test.go  rtree_impl.go
backend/helpers/: id.go  rand.go  settings.go
backend/index/: interface.go
backend/presentation/: app.go  rest.go  visualizer.go  (+1 more)
docs/: ScienceDays.md  debug.tex  description.md  diploma.tex  links.md  task.doc  task.docx  thesis.md  ~$task.docx  ~$тульник.docx  ВКР-titleless.docx  Дипломное задание.docx  Дипломное задание.pages  ДипломноеЗадание.docx  ДипломноеЗадание.pages  Заявление.docx  Заявление.pages  Титульник.docx  Титульный лист отчета по КНИР за 6-й семестр.docx
frontend/: DockerfileFrontend  Makefile  chart.js  index.css  index.html  index.js  nginx.conf  package-lock.json  package.json  vite.config.ts
internal/: Makefile  go.mod  go.sum  main.go
src/: Cargo.toml  main.rs  point.rs
visualisation/: Dockerfile  Makefile  docker-compose.yaml  draw.py  main.ipynb  main.py  points.csv  pyproject.toml
(+393 files in other folders)
